--- a/src/index.css
+++ b/src/index.css
@@ -36,6 +36,14 @@ body {
   min-height: 100vh;
 }
 
+.flex {
+  display: flex;
+}
+
+.items-center {
+  align-items: center;
+}
+
 .leaflet-container {
   background-color: inherit;
   width: 100%;
@@ -51,9 +59,16 @@ body {
   flex-direction: row;
 }
 
+.map {
+  width: 100%;
+  z-index: 10;
+}
+
 .sidebar {
-  width: 200px;
-  margin: 20% 0;
+  position: fixed;
+  right: 0;
+  z-index: 20;
+  margin-top: 100px;
   display: flex;
   flex-direction: column;
   gap: 10px;
@@ -61,18 +76,95 @@ body {
 
 .import-route {
   padding: 10px;
+  background: grey;
   border: 5px solid darkgrey;
+  border-radius: 5px;
+}
+
+.pulls-section {
+  display: flex;
+  flex-direction: column;
+  padding: 8px;
+  gap: 8px;
+  background: grey;
+  border: 5px solid darkgrey;
+  /*border-right: none;*/
+  border-radius: 5px;
 }
 
 .pulls {
-  padding: 10px;
-  border: 5px solid darkgrey;
-  border-right: none;
+  display: flex;
+  flex-direction: column;
 }
 
-.pull { 
+.total-count {
+  display: flex;
+  justify-content: center;
+  margin: 0 8px;
+}
+
+.add-pull {
+  margin: 0 8px;
+}
+
+.pull {
+  position: relative;
+  height: 30px;
   cursor: pointer;
-  color:black;
+  color: black;
+}
+
+.pull-inner {
+  display: flex;
+  justify-content: space-between;
+  padding: 2px 4px;
+}
+
+.pull:hover {
+  filter: brightness(1.5);
+}
+
+.pull-selected-highlight {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  border-width: 2px;
+  border-color: white;
+  box-shadow: inset 0 0 9px 5px white;
+}
+
+.pull-idx {
+  min-width: 15px;
+  margin-right: 4px;
+}
+
+.pull-mobs {
+  display: flex;
+  height: 100%;
+}
+
+.pull-mob-icon {
+  position: relative;
+  height: 26px;
+  width: 100%;
+  margin-right: -3px;
+  border-radius: 100%;
+  border-style: solid;
+  border-color: silver;
+}
+
+.pull-mob-icon-count {
+  position: absolute;
+  bottom: -3px;
+  width: 100%;
+  color: white;
+  text-align: center;
+  font-size: 11px;
+}
+
+.pull-mob-icon > img {
+  height: 100%;
+  border-radius: 100%;
 }
 
 .mob-icon {
@@ -92,5 +184,5 @@ body {
 }
 
 .mob-icon-background{
-  opacity: 0.5;
+  opacity: 0.35;
 }
