--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,9 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
   background-color: #242424;
-
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -14,175 +11,10 @@
   -webkit-text-size-adjust: 100%;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
-#root {
-  width: 100%;
-  min-height: 100vh;
-}
-
-.flex {
-  display: flex;
-}
-
-.items-center {
-  align-items: center;
-}
-
-.leaflet-container {
-  background-color: inherit;
-  width: 100%;
-  height: 100vh;
-}
-
-.leaflet-popup-tip {
-  display: none;
-}
-
-.page {
-  display: flex;
-  flex-direction: row;
-}
-
-.map {
-  width: 100%;
-  z-index: 10;
-}
-
-.sidebar {
-  position: fixed;
-  right: 0;
-  z-index: 20;
-  margin-top: 100px;
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-}
-
-.import-route {
-  padding: 10px;
-  background: grey;
-  border: 5px solid darkgrey;
-  border-radius: 5px;
-}
-
-.pulls-section {
-  display: flex;
-  flex-direction: column;
-  padding: 8px;
-  gap: 8px;
-  background: grey;
-  border: 5px solid darkgrey;
-  /*border-right: none;*/
-  border-radius: 5px;
-}
-
-.pulls {
-  display: flex;
-  flex-direction: column;
-}
-
-.total-count {
-  display: flex;
-  justify-content: center;
-  margin: 0 8px;
-}
-
-.add-pull {
-  margin: 0 8px;
-}
-
-.pull {
-  position: relative;
-  height: 30px;
-  cursor: pointer;
-  color: black;
-}
-
-.pull-inner {
-  display: flex;
-  justify-content: space-between;
-  padding: 2px 4px;
-}
-
 .pull:hover {
   filter: brightness(1.5);
 }
 
 .pull-selected-highlight {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  border-width: 2px;
-  border-color: white;
-  box-shadow: inset 0 0 9px 5px white;
-}
-
-.pull-idx {
-  min-width: 15px;
-  margin-right: 4px;
-}
-
-.pull-mobs {
-  display: flex;
-  height: 100%;
-}
-
-.pull-mob-icon {
-  position: relative;
-  height: 26px;
-  width: 100%;
-  margin-right: -3px;
-  border-radius: 100%;
-  border-style: solid;
-  border-color: silver;
-}
-
-.pull-mob-icon-count {
-  position: absolute;
-  bottom: -3px;
-  width: 100%;
-  color: white;
-  text-align: center;
-  font-size: 11px;
-}
-
-.pull-mob-icon > img {
-  height: 100%;
-  border-radius: 100%;
-}
-
-.mob-icon {
-  height: 100% !important;
-  width: 100% !important;
-  border-radius: 100%;
-  border-style: solid;
-  border-color: silver;
-  overflow: hidden;
-  position: absolute;
-}
-
-.mob-icon > * {
-  position: absolute;
-  height: 100% !important;
-  width: 100% !important;
-}
-
-.mob-icon-background{
-  opacity: 0.35;
+  box-shadow: inset 0 0 2px 2px black;
 }
