--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,12 @@
   filter: brightness(1.3);
 }
 
+.sortable-ghost * {
+  display: none;
+}
+
+.sortable-ghost {
+  z-index: 10;
+  height: 2px;
+  border: 2px solid orange;
+}
