--- a/src/styles.css
+++ b/src/styles.css
@@ -11,6 +11,24 @@
   -webkit-text-size-adjust: 100%;
 }
 
+.leaflet-container {
+  font-family: unset;
+}
+
+.leaflet-tooltip.no-arrow:before {
+  display: none;
+}
+
+.pull-number-tooltip {
+  font-size: 32px;
+  background-color: unset;
+  border: unset;
+  box-shadow: unset;
+  font-weight: 700;
+  color: #fff;
+  -webkit-text-stroke: 1px black;
+}
+
 .pull:hover {
   filter: brightness(1.3);
 }
@@ -23,18 +41,4 @@
   z-index: 10;
   height: 2px;
   border: 2px solid orange;
-}
-
-.pull-number-tooltip {
-  font-size: 24px;
-  background-color: unset;
-  border: unset;
-  box-shadow: unset;
-  font-weight: 700;
-  color: #fff;
-  text-shadow: #000 2px 2px;
-}
-
-.pull-number-tooltip:before {
-  display: none;
 }
