--- a/src/styles.css
+++ b/src/styles.css
@@ -42,3 +42,89 @@
   height: 2px;
   border: 2px solid orange;
 }
+
+.gritty {
+  background-image: url('/button_noise.png');
+  background-blend-mode: overlay;
+}
+
+.fancy-button {
+  display: flex;
+  align-items: center;
+  background-color: rgb(127, 29, 29);
+
+  border: 1px solid black;
+  padding: 4px 16px;
+  line-height: 30px;
+  font-size: 14px;
+  font-weight: normal;
+  border-radius: 6px;
+  user-select: none;
+  top: -3px;
+  position: relative;
+  box-shadow:
+    inset 0 30px 30px -15px rgba(255, 255, 255, 0.1),
+    inset 0 0 0 1px rgba(255, 255, 255, 0.3),
+    inset 0 1px 20px rgba(0, 0, 0, 0),
+    0 3px 0 #7f1d1d,
+    0 3px 2px rgba(0, 0, 0, 0.2),
+    0 5px 10px rgba(0, 0, 0, 0.1),
+    0 10px 20px rgba(0, 0, 0, 0.1);
+  color: white;
+  text-shadow: 0 1px 0 rgba(0, 0, 0, 0.3);
+  transition: 150ms all;
+}
+
+.fancy-button:hover {
+  box-shadow:
+    inset 0 30px 30px -15px rgba(255, 255, 255, 0.1),
+    inset 0 0 4px 2px rgba(255, 255, 255, 0.3),
+    inset 0 1px 20px rgba(0, 0, 0, 0),
+    0 3px 0 #7f1d1d,
+    0 3px 2px rgba(0, 0, 0, 0.2),
+    0 5px 10px rgba(0, 0, 0, 0.1),
+    0 10px 20px rgba(0, 0, 0, 0.1);
+}
+
+.fancy-button:active {
+  transform: translateY(3px);
+  box-shadow:
+    inset 0 16px 2px -15px rgba(0, 0, 0, 0),
+    inset 0 0 0 1px rgba(255, 255, 255, 0.15),
+    inset 0 1px 20px rgba(0, 0, 0, 0.1),
+    0 0 0 rgba(0, 0, 0, 0);
+}
+
+.fancy-button[disabled] {
+  cursor: default;
+  background: #eee;
+  color: #bbb;
+  border-color: #bbb;
+  text-shadow: 0 1px 0 white;
+  box-shadow:
+    inset 0 0 0 1px rgba(255, 255, 255, 1),
+    inset 0 1px 20px rgba(0, 0, 0, 0),
+    0 3px 0 #bbb,
+    0 0 0 1px white,
+    0 3px 0 1px white,
+    0 10px 20px rgba(0, 0, 0, 0);
+  top: -3px;
+  transition: none;
+}
+
+.fancy-button[disabled]:active {
+  top: -2px;
+  box-shadow:
+    inset 0 0 0 1px rgba(255, 255, 255, 1),
+    inset 0 1px 20px rgba(0, 0, 0, 0),
+    0 2px 0 #bbb,
+    0 0 0 1px white,
+    0 2px 0 1px white,
+    0 10px 20px rgba(0, 0, 0, 0);
+}
+
+.fancy-button:focus-visible {
+  /*border: none;*/
+  outline: 2px solid yellow;
+  /*border: 2px solid yellow;*/
+}
