--- a/src/styles.scss
+++ b/src/styles.scss
@@ -45,7 +45,7 @@
 }
 
 .gritty {
-  background-image: url('/button_noise.png');
+  background-image: url(/button_noise.png);
   background-blend-mode: overlay;
 }
 
