--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,6 +9,7 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+  font-family: 'Roboto Slab Variable', serif;
 }
 
 .leaflet-container {
