--- a/src/styles.scss
+++ b/src/styles.scss
@@ -55,6 +55,7 @@
 
   display: flex;
   align-items: center;
+  justify-content: center;
   background-color: #7f1d1d;
   border: 1px solid black;
   padding: 8px 16px;
