fix pull gritty

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -48,6 +48,7 @@
 .gritty {
   background-image: url(/button_noise.png);
   background-blend-mode: overlay;
+  background-repeat: repeat;
 }
 
 .fancy {
