--- a/src/styles.scss
+++ b/src/styles.scss
@@ -157,30 +157,9 @@
 
   &[disabled] {
     cursor: default;
-    background: #eee;
-    color: #bbb;
-    border-color: #bbb;
-    text-shadow: 0 1px 0 white;
-    box-shadow:
-      inset 0 0 0 1px rgba(255, 255, 255, 1),
-      inset 0 1px 20px rgba(0, 0, 0, 0),
-      0 3px 0 #bbb,
-      0 0 0 1px white,
-      0 3px 0 1px white,
-      0 10px 20px rgba(0, 0, 0, 0);
-    top: -3px;
+    opacity: 0.9;
+    filter: contrast(0.6);
     transition: none;
-  }
-
-  &[disabled]:active {
-    top: -2px;
-    box-shadow:
-      inset 0 0 0 1px rgba(255, 255, 255, 1),
-      inset 0 1px 20px rgba(0, 0, 0, 0),
-      0 2px 0 #bbb,
-      0 0 0 1px white,
-      0 2px 0 1px white,
-      0 10px 20px rgba(0, 0, 0, 0);
   }
 
   &:focus-visible {
