--- a/src/styles.scss
+++ b/src/styles.scss
@@ -118,7 +118,7 @@
   &:hover {
     box-shadow:
       inset 0 30px 30px -15px rgba(255, 255, 255, 0.1),
-      inset 0 0 4px 2px rgba(255, 255, 255, 0.3),
+      inset 0 0 6px 3px rgba(255, 255, 255, 0.4),
       inset 0 1px 20px rgba(0, 0, 0, 0),
       0 3px 0 #7f1d1d,
       0 3px 2px rgba(0, 0, 0, 0.2),
@@ -129,7 +129,7 @@
       transform: unset;
       box-shadow:
         inset 0 30px 30px -15px rgba(255, 255, 255, 0.1),
-        inset 0 0 4px 2px rgba(255, 255, 255, 0.3),
+        inset 0 0 6px 3px rgba(255, 255, 255, 0.4),
         inset 0 1px 20px rgba(0, 0, 0, 0),
         0 3px 2px rgba(0, 0, 0, 0.2),
         0 5px 10px rgba(0, 0, 0, 0.1),
@@ -176,7 +176,7 @@
     transition-timing-function: ease-out;
 
     &.options-visible {
-      border: 1px solid white;
+      border: 1px solid #c2c2c2;
       border-bottom: none;
     }
   }
@@ -200,7 +200,7 @@
       max-height: 50px;
     }
 
-    border: 1px solid white;
+    border: 1px solid #c2c2c2;
     border-top: none;
     border-top-left-radius: 0;
     border-top-right-radius: 0;
