--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,6 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
+$fancy-red: #7f1d1d;
+
 :root {
   background-color: #242424;
   font-synthesis: none;
@@ -28,6 +30,10 @@
   font-weight: 700;
   color: #fff;
   -webkit-text-stroke: 1px black;
+
+  &.hovered {
+    font-size: 36px;
+  }
 }
 
 .pull:hover {
@@ -57,7 +63,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: #7f1d1d;
+  background-color: $fancy-red;
   border: 1px solid black;
   padding: 8px 16px;
   font-size: 14px;
@@ -85,7 +91,7 @@ input.fancy {
     inset 0 30px 30px -15px rgba(255, 255, 255, 0.1),
     inset 0 0 0 1px rgba(255, 255, 255, 0.3),
     inset 0 1px 20px rgba(0, 0, 0, 0),
-    /*0 3px 0 #7f1d1d,*/ 0 3px 2px rgba(0, 0, 0, 0.2),
+    /*0 3px 0 $fancy-red,*/ 0 3px 2px rgba(0, 0, 0, 0.2),
     0 5px 10px rgba(0, 0, 0, 0.1),
     0 10px 20px rgba(0, 0, 0, 0.1);
 }
@@ -103,10 +109,25 @@ input.fancy {
     inset 0 30px 30px -15px rgba(255, 255, 255, 0.1),
     inset 0 0 0 1px rgba(255, 255, 255, 0.3),
     inset 0 1px 20px rgba(0, 0, 0, 0),
-    0 3px 0 #7f1d1d,
+    0 3px 0 $fancy-red,
     0 3px 2px rgba(0, 0, 0, 0.2),
     0 5px 10px rgba(0, 0, 0, 0.1),
     0 10px 20px rgba(0, 0, 0, 0.1);
+
+  &.outline-button {
+    background-color: rgba(255, 255, 255, 0.95);
+    color: $fancy-red;
+    border: 1px solid $fancy-red;
+
+    box-shadow:
+      inset 0 30px 30px -15px rgba(127, 29, 29, 0.1),
+      inset 0 0 0 1px rgba(127, 29, 29, 0.3),
+      inset 0 1px 20px rgba(0, 0, 0, 0),
+      0 3px 0 $fancy-red,
+      0 3px 2px rgba(0, 0, 0, 0.2),
+      0 5px 10px rgba(0, 0, 0, 0.1),
+      0 10px 20px rgba(0, 0, 0, 0.1);
+  }
 
   &.two-d {
     top: unset;
@@ -124,10 +145,21 @@ input.fancy {
       inset 0 30px 30px -15px rgba(255, 255, 255, 0.1),
       inset 0 0 6px 3px rgba(255, 255, 255, 0.4),
       inset 0 1px 20px rgba(0, 0, 0, 0),
-      0 3px 0 #7f1d1d,
+      0 3px 0 $fancy-red,
       0 3px 2px rgba(0, 0, 0, 0.2),
       0 5px 10px rgba(0, 0, 0, 0.1),
       0 10px 20px rgba(0, 0, 0, 0.1);
+
+    &.outline-button:not(:active) {
+      box-shadow:
+        inset 0 30px 30px -15px rgba(127, 29, 29, 0.1),
+        inset 0 0 6px 3px rgba(127, 29, 29, 0.5),
+        inset 0 1px 20px rgba(0, 0, 0, 0),
+        0 3px 0 $fancy-red,
+        0 3px 2px rgba(0, 0, 0, 0.2),
+        0 5px 10px rgba(0, 0, 0, 0.1),
+        0 10px 20px rgba(0, 0, 0, 0.1);
+    }
 
     &.two-d {
       transform: unset;
