--- a/src/styles.scss
+++ b/src/styles.scss
@@ -36,6 +36,19 @@ $fancy-red: #7f1d1d;
   }
 }
 
+.note {
+}
+
+.note-tooltip {
+  font-size: 32px;
+  background-color: unset;
+  border: unset;
+  box-shadow: unset;
+  font-weight: 700;
+  color: #fff;
+  -webkit-text-stroke: 1px black;
+}
+
 .pull:hover {
   filter: brightness(1.3);
 }
