--- a/src/styles.scss
+++ b/src/styles.scss
@@ -133,8 +133,7 @@ input.fancy {
     0 10px 20px rgba(0, 0, 0, 0.1);
 
   &.outline-button {
-    background-color: rgba(218, 218, 218, 0.95);
-    color: $fancy-red;
+    background-color: #222222;
     border: 1px solid $fancy-red;
 
     box-shadow:
