--- a/src/styles.scss
+++ b/src/styles.scss
@@ -133,14 +133,14 @@ input.fancy {
     0 10px 20px rgba(0, 0, 0, 0.1);
 
   &.outline-button {
-    background-color: #222222;
-    border: 1px solid $fancy-red;
+    background-color: #333333;
+    border: 1px solid #777777;
 
     box-shadow:
       inset 0 30px 30px -15px rgba(127, 29, 29, 0.1),
       inset 0 0 0 1px rgba(127, 29, 29, 0.3),
       inset 0 1px 20px rgba(0, 0, 0, 0),
-      0 3px 0 $fancy-red,
+      0 3px 0 #444444,
       0 3px 2px rgba(0, 0, 0, 0.2),
       0 5px 10px rgba(0, 0, 0, 0.1),
       0 10px 20px rgba(0, 0, 0, 0.1);
