header and footer

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -132,6 +132,10 @@ img.leaflet-tile {
   background-color: $fancy-red;
 }
 
+.text-fancy-red {
+  color: $fancy-red;
+}
+
 .bg-fancy-blue {
   background-color: $fancy-blue;
 }
