--- a/src/styles.scss
+++ b/src/styles.scss
@@ -169,6 +169,7 @@ input.fancy {
   top: -3px;
   position: relative;
   transition: 150ms all;
+  white-space: nowrap;
 
   box-shadow:
     inset 0 30px 30px -15px rgba(255, 255, 255, 0.1),
