--- a/src/styles.scss
+++ b/src/styles.scss
@@ -154,12 +154,16 @@ input.fancy {
     inset 0 30px 30px -15px rgba(255, 255, 255, 0.1),
     inset 0 0 0 1px rgba(255, 255, 255, 0.3),
     inset 0 1px 20px rgba(0, 0, 0, 0),
-    /*0 3px 0 $fancy-red,*/ 0 3px 2px rgba(0, 0, 0, 0.2),
+    0 3px 2px rgba(0, 0, 0, 0.2),
     0 5px 10px rgba(0, 0, 0, 0.1),
     0 10px 20px rgba(0, 0, 0, 0.1);
 
   &.error {
     background-color: #b61111;
+  }
+
+  &.info {
+    background-color: #1e2e8c;
   }
 }
 
@@ -223,13 +227,22 @@ input.fancy {
       0 10px 20px rgba(0, 0, 0, 0.1);
   }
 
+  &.two-d.outline-button {
+    top: unset;
+    box-shadow:
+      inset 0 1px 20px rgba(0, 0, 0, 0),
+      0 3px 2px rgba(0, 0, 0, 0.2),
+      0 5px 10px rgba(0, 0, 0, 0.1),
+      0 10px 20px rgba(0, 0, 0, 0.1);
+  }
+
   &:hover {
     .fancy-button-hover {
       background: radial-gradient(#de1313, transparent);
     }
 
     &.outline-button .fancy-button-hover {
-      background: radial-gradient(rgba(217, 150, 150, 0.4), transparent);
+      background: radial-gradient(rgba(217, 150, 150, 0.2), transparent);
     }
 
     &.two-d {
