fix image paths

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -108,7 +108,7 @@ $fancy-blue: #131a34;
 }
 
 .gritty {
-  background-image: url(/button_noise.png);
+  background-image: url(/images/button_noise.png);
   background-blend-mode: overlay;
   background-repeat: repeat;
 }
