--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,6 +4,7 @@
 
 $fancy-red: #7f1d1d;
 $fancy-blue: #131a34;
+$fancy-green: #1d7f1f;
 
 :root {
   background-color: #242424;
@@ -135,6 +136,10 @@ $fancy-blue: #131a34;
     padding-top: 4px;
     padding-bottom: 4px;
   }
+
+  &.green {
+    background-color: $fancy-green;
+  }
 }
 
 .bg-fancy-red {
@@ -153,17 +158,27 @@ input.fancy {
   background-color: rgb(78 78 87);
 }
 
-.fancy-toast {
-  @extend .fancy;
+@mixin fancy-shadow($two-d: false, $color: $fancy-red) {
+  $bottom-size: 3px;
+  @if $two-d {
+    $bottom-size: 0;
+  }
 
-  background-color: #1c7a37;
   box-shadow:
     inset 0 30px 30px -15px rgba(255, 255, 255, 0.1),
     inset 0 0 0 1px rgba(255, 255, 255, 0.3),
     inset 0 1px 20px rgba(0, 0, 0, 0),
+    0 $bottom-size 0 $color,
     0 3px 2px rgba(0, 0, 0, 0.2),
     0 5px 10px rgba(0, 0, 0, 0.1),
     0 10px 20px rgba(0, 0, 0, 0.1);
+}
+
+.fancy-toast {
+  @extend .fancy;
+  @include fancy-shadow(true);
+
+  background-color: $fancy-green;
 
   &.error {
     background-color: #b61111;
@@ -176,6 +191,7 @@ input.fancy {
 
 .fancy-button {
   @extend .fancy;
+  @include fancy-shadow();
 
   cursor: pointer;
   user-select: none;
@@ -184,14 +200,9 @@ input.fancy {
   transition: 150ms all;
   white-space: nowrap;
 
-  box-shadow:
-    inset 0 30px 30px -15px rgba(255, 255, 255, 0.1),
-    inset 0 0 0 1px rgba(255, 255, 255, 0.3),
-    inset 0 1px 20px rgba(0, 0, 0, 0),
-    0 3px 0 $fancy-red,
-    0 3px 2px rgba(0, 0, 0, 0.2),
-    0 5px 10px rgba(0, 0, 0, 0.1),
-    0 10px 20px rgba(0, 0, 0, 0.1);
+  &.green {
+    @include fancy-shadow(false, $fancy-green);
+  }
 
   &-inner {
     position: relative;
@@ -224,14 +235,8 @@ input.fancy {
   }
 
   &.two-d {
+    @include fancy-shadow(true);
     top: unset;
-    box-shadow:
-      inset 0 30px 30px -15px rgba(255, 255, 255, 0.1),
-      inset 0 0 0 1px rgba(255, 255, 255, 0.3),
-      inset 0 1px 20px rgba(0, 0, 0, 0),
-      0 3px 2px rgba(0, 0, 0, 0.2),
-      0 5px 10px rgba(0, 0, 0, 0.1),
-      0 10px 20px rgba(0, 0, 0, 0.1);
   }
 
   &.two-d.outline-button {
@@ -246,6 +251,10 @@ input.fancy {
   &:hover {
     .fancy-button-hover {
       background: radial-gradient(#de1313, transparent);
+    }
+
+    &.green .fancy-button-hover {
+      background: radial-gradient(#3bd324, transparent);
     }
 
     &.outline-button .fancy-button-hover {
