--- a/src/styles.scss
+++ b/src/styles.scss
@@ -56,7 +56,7 @@ $fancy-green: #1d7f1f;
   border: unset;
   box-shadow: unset;
   font-weight: 700;
-  color: #fff;
+  color: rgb(238, 238, 238);
   -webkit-text-stroke: 1px black;
 
   &.hovered {
