--- a/src/styles.scss
+++ b/src/styles.scss
@@ -312,7 +312,7 @@ input.fancy {
   .dropdown-main-text {
     text-overflow: ellipsis;
     white-space: nowrap;
-    overflow: auto;
+    overflow: hidden;
   }
 }
 
