--- a/src/styles.scss
+++ b/src/styles.scss
@@ -21,11 +21,12 @@ $fancy-yellow: #7f6b1d;
 .leaflet-container {
   font-family: unset;
 
-  &.mode-create {
+  &.mode-create,
+  &.mode-create .leaflet-interactive {
     cursor:
       url("data:image/svg+xml;charset=utf-8,%3Csvg width='24' height='24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cg filter='url(%23a)'%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M3.939 18.93a1 1 0 0 0 1.131 1.13l4.29-.613a3 3 0 0 0 1.697-.848l9.428-9.428a3 3 0 0 0 0-4.243l-1.414-1.414a3 3 0 0 0-4.243 0L5.4 12.943a3 3 0 0 0-.848 1.697l-.613 4.29Z' fill='%23fff'/%3E%3Cpath d='m4.929 19.071 2.475-.354-2.121-2.12-.354 2.474Zm.531-3.712 3.18 3.181.578-.083a2 2 0 0 0 1.131-.566l9.428-9.428a1.99 1.99 0 0 0 .537-.973 1.99 1.99 0 0 0-.537-1.855l-1.414-1.414a2 2 0 0 0-2.828 0L6.107 13.65a2 2 0 0 0-.565 1.131l-.083.578Z' fill='currentColor'/%3E%3C/g%3E%3Cdefs%3E%3Cfilter id='a' x='-2' y='-1' width='28' height='28' filterUnits='userSpaceOnUse' color-interpolation-filters='sRGB'%3E%3CfeFlood flood-opacity='0' result='BackgroundImageFix'/%3E%3CfeColorMatrix in='SourceAlpha' values='0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0' result='hardAlpha'/%3E%3CfeOffset dy='1'/%3E%3CfeGaussianBlur stdDeviation='1'/%3E%3CfeComposite in2='hardAlpha' operator='out'/%3E%3CfeColorMatrix values='0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.2 0'/%3E%3CfeBlend in2='BackgroundImageFix' result='effect1_dropShadow_3181_2634'/%3E%3CfeBlend in='SourceGraphic' in2='effect1_dropShadow_3181_2634' result='shape'/%3E%3C/filter%3E%3C/defs%3E%3C/svg%3E")
         2 20,
-      auto;
+      auto !important;
   }
 }
 
