promote to host

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -150,6 +150,7 @@ $fancy-yellow: #7f6b1d;
     min-height: 0;
     padding: 0 4px;
     font-size: 12px;
+    border-radius: 3px;
   }
 
   &.green {
