mobile tap improvements

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -389,7 +389,8 @@ input.fancy {
   }
 }
 
-.dungeon-dropdown .route-dropdown {
+.dungeon-dropdown,
+.route-dropdown {
   .dropdown-main-text {
     font-size: 16px;
   }
